treesitter/grammar.js
    source_file: ($) => seq(repeat($.import_declaration), repeat($._declaration)),

    _declaration: ($) =>
      choice($.function_declaration, $.extern_function_declaration, $.export_declaration, $.struct_declaration, $.shape_declaration, $.union_declaration, $.enum_declaration, $.let_binding, $.compile_if_declaration, $.macro_invocation),

    // A top-level macro call like `mod.macro(args)`. A dedicated rule (rather than
    // reusing call_expression) keeps declarations out of the callee position.
    macro_invocation: ($) =>
      seq(
        field("module", $.identifier),
        repeat1(seq(".", $.identifier)),
        optional(field("type_arguments", $.type_arguments)),
        "(", field("arguments", optional($.argument_list)), ")",
      ),

    // >>> Conditional compilation

    import_declaration: ($) =>
      seq(
        "use",
        optional(seq(field("alias", $.identifier), "=")),
        field("path", $.import_path),
      ),

    import_path: ($) =>
      seq($.identifier, repeat(seq(".", $.identifier))),

    // >>> Comments
    // Line comments: `-- ...`
    // Block comments: `--- ... ---`
    // The line comment regex requires a non-dash char after `--` to avoid
    // consuming `---` which starts a block comment.

    identifier: (_) => /[a-z_][a-zA-Z0-9_]*/,

    type_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,

    allocator_identifier: (_) => /@[a-z][a-zA-Z0-9_]*/,

    // >>> Literals

    integer_literal: (_) =>
      token(choice(
        seq("0x", /[0-9a-fA-F]+(_[0-9a-fA-F]+)*/),
        seq("0o", /[0-7]+(_[0-7]+)*/),
        seq("0b", /[01]+(_[01]+)*/),
        /[0-9]+(_[0-9]+)*/,
      )),

    string_literal: (_) => seq('"', /([^"\\]|\\.)*/, '"'),

    boolean_literal: (_) => choice("true", "false"),

    type_parameters: ($) => seq(
      token.immediate("<"),
      $.type_parameter,
      repeat(seq(",", $.type_parameter)),
      ">",
    ),

    type_parameter: ($) => seq(
      optional(choice("sync", "unsync")),
      field("name", $.type_identifier),
      optional(field("constraint", $.simple_type)),
      optional(seq("=", field("default", $._type))),
    ),

    type_arguments: ($) => seq(
      token.immediate("<"),
      $._type,
      repeat(seq(",", $._type)),
      ">",
    ),

    // >>> Types

    _type: ($) =>
      choice(
        $.simple_type,
        $.array_type,
        $.slice_type,
        $.reference_type,
        $.optional_type,
        $.result_type,
        $.function_type,
      ),

    // `?T` is `Option<T>`; `!T` is `Result<T>`.
    simple_type: ($) => choice(
      seq(
        optional(seq($.identifier, ".")),
        $.type_identifier,
        repeat(seq(".", $.type_identifier)),
        optional($.type_arguments),
      ),
      "void",
      "never",
    ),

    slice_type: ($) => seq("[", "]", optional("mut"), $._type),

    reference_type: ($) => seq("&", optional("mut"), $._type),

    // >>> Function declaration

    function_declaration: ($) =>
      seq(
        optional("pub"),
        optional("unsync"),
        optional("unsafe"),
        "fun",
        field("name", $.function_name),
        optional(field("type_parameters", $.type_parameters)),
        "(", field("parameters", optional($.parameter_list)), ")",
        optional("noescape"),
        field("return_type", $._type),
        field("body", $.block),
      ),

    extern_function_declaration: ($) =>
      seq(
        optional("pub"),
        "extern",
        optional(seq("(", field("link_name", $.string_literal), ")")),
        "fun",
        field("name", $.function_name),
        optional(field("type_parameters", $.type_parameters)),
        "(", field("parameters", optional($.parameter_list)), ")",
        optional("noescape"),
        field("return_type", $._type),
      ),

    // >>> Export declaration
    // `export <c_name> = <target>` exposes a Metall function under an
    // unmangled C symbol.

    export_declaration: ($) =>
      prec.right(seq(
        "export",
        field("name", $.identifier),
        "=",
        field("target", $._expression),
      )),

    function_name: ($) =>
      choice(
        $.identifier,
        seq($.type_identifier, ".", $.identifier),
      ),

    // The comma between parameters is optional (`a Int, b Str` or `a Int b Str`).
    parameter_list: ($) => seq($.parameter, repeat(seq(optional(","), $.parameter)), optional(",")),

    parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.allocator_identifier)),
        optional(choice("sync", "noescape")),
        field("type", $._type),
        optional(seq("=", field("default", $._expression))),
      ),

    // >>> Struct declaration

    struct_declaration: ($) =>
      seq(
        optional("pub"),
        optional("nocopy"),
        optional(choice("sync", "unsync")),
        "struct",
        field("name", $.type_identifier),
        optional(field("type_parameters", $.type_parameters)),
        "{", repeat($.struct_field), "}",
      ),

    struct_field: ($) =>
      seq(
        optional("pub"),
        field("name", choice($.identifier, $.allocator_identifier)),
        field("type", $._type),
      ),

    // >>> Shape declaration

    block: ($) => seq("{", repeat($._expression), "}"),

    // >>> Expressions

    _expression: ($) =>
      choice(
        // Literals and atoms.
        $.integer_literal,
        $.string_literal,
        $.bytes_literal,
        $.rune_literal,
        $.boolean_literal,
        $.void,
        $.identifier,
        $.allocator_identifier,
        $.grouped_expression,
        $.array_literal,
        $.empty_slice,
        $.block,

        // Declarations (can appear inside blocks).
        $.function_declaration,
        $.struct_declaration,
        $.shape_declaration,
        $.union_declaration,
        $.enum_declaration,

        // Type-prefixed expressions.
        $.qualified_name,
        $.type_construction,

        // Bindings and assignment.
        $.let_binding,
        $.mut_binding,
        $.allocator_binding,
        $.assignment,

        // Operators.
        $.binary_expression,
        $.unary_expression,

        // Postfix.
        $.call_expression,
        $.field_access,
        $.index_expression,
        $.sub_slice,
        $.reference,
        $.dereference,

        // Function literal / closure.
        $.function_literal,

        // Conditional compilation.
        $.compile_if_expression,

        // Control flow.
        $.if_expression,
        $.when_expression,
        $.for_expression,
        $.match_expression,
        $.try_expression,
        $.return_expression,
        $.break_expression,
        $.continue_expression,
      ),

    // >>> Type-prefixed expressions

    // TypeName.methodName or TypeName.methodName<Args>
    type_construction: ($) =>
      prec(PREC.POSTFIX, seq(
        field("type", $.type_identifier),
        optional(field("type_arguments", $.type_arguments)),
        "(", field("arguments", optional($.argument_list)), ")",
      )),

    // >>> Bindings

    let_binding: ($) =>
      prec.right(PREC.ASSIGN,
        seq(optional("pub"), "let", field("name", $.identifier), optional(field("type", $._type)), "=", field("value", $._expression))),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "or", $._expression)),
        prec.left(PREC.AND, seq($._expression, "and", $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, "|", $._expression)),
        prec.left(PREC.BIT_XOR, seq($._expression, "^", $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, "&", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "==", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "!=", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "<", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "<=", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, ">", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, ">=", $._expression)),
        prec.left(PREC.SHIFT, seq($._expression, "<<", $._expression)),
        // Right-shift is two adjacent `>` rather than one token, so a nested
        // generic close like `Foo<Bar<T>>` can consume them as two `>`.
        prec.left(PREC.SHIFT, seq($._expression, ">", token.immediate(">"), $._expression)),
        prec.left(PREC.ADD, seq($._expression, "+", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "-", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "+%", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "-%", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "*", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "/", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "%", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "*%", $._expression)),
      ),

    call_expression: ($) =>
      prec(PREC.POSTFIX, seq(
        optional("unsafe"),
        field("callee", $._expression),
        optional(field("type_arguments", $.type_arguments)),
        "(", field("arguments", optional($.argument_list)), ")",
      )),

    argument_list: ($) =>
      seq($._expression, repeat(seq(",", $._expression)), optional(",")),

    field_access: ($) =>
      prec.left(PREC.POSTFIX, seq(
        field("object", $._expression),
        ".",
        field("field", choice($.identifier, $.type_identifier, $.allocator_identifier)),
      )),

    function_literal: ($) =>
      seq(
        "fun",
        optional(field("captures", $.capture_list)),
        "(", field("parameters", optional($.function_literal_parameter_list)), ")",
        optional(seq(optional("noescape"), field("return_type", $._type))),
        field("body", $.block),
      ),

    function_literal_parameter_list: ($) =>
      seq($.function_literal_parameter, repeat(seq(",", $.function_literal_parameter))),

    function_literal_parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.allocator_identifier)),
        optional(seq(optional(choice("sync", "noescape")), field("type", $._type))),
        optional(seq("=", field("default", $._expression))),
      ),

    capture_list: ($) => seq(
      token.immediate("["),
      optional(seq($.capture, repeat(seq(",", $.capture)))),
      "]",
    ),

    capture: ($) => choice(
      field("name", choice($.identifier, $.allocator_identifier)),  // by value
      seq("&", field("name", $.identifier)),                        // by ref
      seq("&", "mut", field("name", $.identifier)),                 // by mut ref
    ),

    // >>> Array literal
