treesitter/test/corpus/functions.txt
================================================================================
Extern function declaration
================================================================================

extern fun abs(n Int) Int

--------------------------------------------------------------------------------

(source_file
  (extern_function_declaration
    name: (function_name (identifier))
    parameters: (parameter_list
      (parameter name: (identifier) type: (simple_type (type_identifier))))
    return_type: (simple_type (type_identifier))))

================================================================================
Extern function with link name
================================================================================

extern("chdir") fun my_chdir(path Int) Int

--------------------------------------------------------------------------------

(source_file
  (extern_function_declaration
    link_name: (string_literal)
    name: (function_name (identifier))
    parameters: (parameter_list
      (parameter name: (identifier) type: (simple_type (type_identifier))))
    return_type: (simple_type (type_identifier))))

================================================================================
Unsafe function and call
================================================================================

unsafe fun danger() Int { 42 }
fun main() void { unsafe danger() }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    return_type: (simple_type (type_identifier))
    body: (block (integer_literal)))
  (function_declaration
    name: (function_name (identifier))
    return_type: (simple_type)
    body: (block
      (unsafe_call
        (call_expression
          callee: (identifier))))))

================================================================================
Simple function
================================================================================

fun foo() Int { 123 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    return_type: (simple_type (type_identifier))
    body: (block (integer_literal))))

================================================================================
Function with parameters
================================================================================

fun add(a Int, b Int) Int { a }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    parameters: (parameter_list
      (parameter name: (identifier) type: (simple_type (type_identifier)))
      (parameter name: (identifier) type: (simple_type (type_identifier))))
    return_type: (simple_type (type_identifier))
    body: (block (identifier))))

================================================================================
Void function
================================================================================

fun foo() void {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    return_type: (simple_type)
    body: (block)))

================================================================================
Namespaced function
================================================================================

fun Str.eq(s Str) Bool { true }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (type_identifier) (identifier))
    parameters: (parameter_list
      (parameter name: (identifier) type: (simple_type (type_identifier))))
    return_type: (simple_type (type_identifier))
    body: (block (boolean_literal))))

================================================================================
Allocator parameter
================================================================================

fun foo(@a Arena) void {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    parameters: (parameter_list
      (parameter name: (allocator_identifier) type: (simple_type (type_identifier))))
    return_type: (simple_type)
    body: (block)))

================================================================================
Function literal
================================================================================

let f = fun(x Int) Int { x }

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (function_literal
      parameters: (function_literal_parameter_list
        (function_literal_parameter name: (identifier) type: (simple_type (type_identifier))))
      return_type: (simple_type (type_identifier))
      body: (block (identifier)))))

================================================================================
Closure with value capture
================================================================================

let f = fun[x](a Int) Int { x }

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (function_literal
      captures: (capture_list (capture name: (identifier)))
      parameters: (function_literal_parameter_list
        (function_literal_parameter name: (identifier) type: (simple_type (type_identifier))))
      return_type: (simple_type (type_identifier))
      body: (block (identifier)))))

================================================================================
Noescape parameter
================================================================================

fun apply(x noescape &Int) Int { x }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    parameters: (parameter_list
      (parameter name: (identifier) type: (reference_type (simple_type (type_identifier)))))
    return_type: (simple_type (type_identifier))
    body: (block (identifier))))

================================================================================
Closure with ref and mut ref captures
================================================================================

let f = fun[a, &b, &mut c]() void {}

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (function_literal
      captures: (capture_list
        (capture name: (identifier))
        (capture name: (identifier))
        (capture name: (identifier)))
      return_type: (simple_type)
      body: (block))))

================================================================================
Function literal with inferred param types
================================================================================

let f = fun(a, b) { true }

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (function_literal
      parameters: (function_literal_parameter_list
        (function_literal_parameter name: (identifier))
        (function_literal_parameter name: (identifier)))
      body: (block (boolean_literal)))))

================================================================================
Function literal with inferred return type
================================================================================

let f = fun(a Int) { a }

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (function_literal
      parameters: (function_literal_parameter_list
        (function_literal_parameter name: (identifier) type: (simple_type (type_identifier))))
      body: (block (identifier)))))

================================================================================
Function literal with mixed param types
================================================================================

let f = fun(a, b Int) { b }

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (function_literal
      parameters: (function_literal_parameter_list
        (function_literal_parameter name: (identifier))
        (function_literal_parameter name: (identifier) type: (simple_type (type_identifier))))
      body: (block (identifier)))))

================================================================================
Comma-less parameters
================================================================================

fun f(s []T pattern P) Bool {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (slice_type
          (simple_type
            (type_identifier))))
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type
      (type_identifier))
    body: (block)))

================================================================================
Top-level macro invocation
================================================================================

macro_macro.apply("hello")

--------------------------------------------------------------------------------

(source_file
  (macro_invocation
    module: (identifier)
    (identifier)
    arguments: (argument_list
      (string_literal))))

================================================================================
Public extern function
================================================================================

pub extern fun abs(n I32) I32

--------------------------------------------------------------------------------

(source_file
  (extern_function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type
      (type_identifier))))
