treesitter/test/corpus/generics.txt
================================================================================
Generic function declaration
================================================================================

fun show<T>(t T) void { t }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    type_parameters: (type_parameters
      (type_parameter name: (type_identifier)))
    parameters: (parameter_list
      (parameter name: (identifier) type: (simple_type (type_identifier))))
    return_type: (simple_type)
    body: (block (identifier))))

================================================================================
Generic function with constraint
================================================================================

fun show<T Showable>(t T) void { t }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    type_parameters: (type_parameters
      (type_parameter name: (type_identifier) constraint: (simple_type (type_identifier))))
    parameters: (parameter_list
      (parameter name: (identifier) type: (simple_type (type_identifier))))
    return_type: (simple_type)
    body: (block (identifier))))

================================================================================
Generic function call
================================================================================

fun f() void { show<Guitar>(g) }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    return_type: (simple_type)
    body: (block
      (call_expression
        callee: (identifier)
        type_arguments: (type_arguments (simple_type (type_identifier)))
        arguments: (argument_list (identifier))))))

================================================================================
Generic struct declaration
================================================================================

struct Box<T> { value T }

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    name: (type_identifier)
    type_parameters: (type_parameters
      (type_parameter name: (type_identifier)))
    (struct_field name: (identifier) type: (simple_type (type_identifier)))))

================================================================================
Generic struct literal
================================================================================

fun f() void { Box<Int>(42) }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    return_type: (simple_type)
    body: (block
      (type_construction
        type: (type_identifier)
        type_arguments: (type_arguments (simple_type (type_identifier)))
        arguments: (argument_list (integer_literal))))))

================================================================================
Generic type in parameter
================================================================================

fun f(b Box<Int>) void {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type (type_identifier) (type_arguments (simple_type (type_identifier))))))
    return_type: (simple_type)
    body: (block)))

================================================================================
Multiple type parameters
================================================================================

fun pair<A, B>(a A, b B) void {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    type_parameters: (type_parameters
      (type_parameter name: (type_identifier))
      (type_parameter name: (type_identifier)))
    parameters: (parameter_list
      (parameter name: (identifier) type: (simple_type (type_identifier)))
      (parameter name: (identifier) type: (simple_type (type_identifier))))
    return_type: (simple_type)
    body: (block)))

================================================================================
Method with type arguments
================================================================================

fun f() void { x.foo<Int>(42) }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name (identifier))
    return_type: (simple_type)
    body: (block
      (call_expression
        callee: (field_access
          object: (identifier)
          field: (identifier))
        type_arguments: (type_arguments (simple_type (type_identifier)))
        arguments: (argument_list (integer_literal))))))
