treesitter/test/corpus/imports.txt
================================================================================
simple import
================================================================================

use lib

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    path: (import_path
      (identifier))))

================================================================================
nested import
================================================================================

use std.collections.map

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    path: (import_path
      (identifier)
      (identifier)
      (identifier))))

================================================================================
local import
================================================================================

use local.util

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    path: (import_path
      (identifier)
      (identifier))))

================================================================================
aliased import
================================================================================

use m = std.collections.map

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    alias: (identifier)
    path: (import_path
      (identifier)
      (identifier)
      (identifier))))

================================================================================
symbol import
================================================================================

use std.list.List

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    path: (import_path
      (identifier)
      (identifier)
      (type_identifier))))

================================================================================
pub re-export
================================================================================

pub use std.list.List

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    path: (import_path
      (identifier)
      (identifier)
      (type_identifier))))

================================================================================
symbol import with rename
================================================================================

use Vec = std.list.List

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    alias: (type_identifier)
    path: (import_path
      (identifier)
      (identifier)
      (type_identifier))))

================================================================================
multiple imports
================================================================================

use lib
use local.util

fun main() void {}

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    path: (import_path
      (identifier)))
  (import_declaration
    path: (import_path
      (identifier)
      (identifier)))
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block)))

================================================================================
path function call
================================================================================

fun main() void {
  lib.get_lib()
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (call_expression
        callee: (field_access
          object: (identifier)
          field: (identifier))))))

================================================================================
path struct literal
================================================================================

fun main() void {
  lib.Point(1, 2)
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (call_expression
        callee: (field_access
          object: (identifier)
          field: (type_identifier))
        arguments: (argument_list
          (integer_literal)
          (integer_literal))))))

================================================================================
path method call via field access
================================================================================

fun main() void {
  lib.Foo.bar(x)
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (call_expression
        callee: (field_access
          object: (field_access
            object: (identifier)
            field: (type_identifier))
          field: (identifier))
        arguments: (argument_list
          (identifier))))))
